--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "axios": "^0.17.1",
     "ejs": "2.3.4",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
@@ -21,6 +22,7 @@
     "include-all": "^1.0.0",
     "node-wit": "^5.0.0",
     "rc": "1.0.1",
+    "request-country": "^0.1.0",
     "sails": "~0.12.14",
     "sails-disk": "~0.10.9"
   },
