--- a/.gitignore
+++ b/.gitignore
@@ -36,10 +36,11 @@
 #    e.g., your local development database, or
 #    the S3 bucket you're using for file uploads
 #    development.
-# 
+#   
+#   config/local.js
 ################################################
 
-config/local.js
+
 
 
 
